[package]
name = "tiled2saturn"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4.4.6", features = ["derive"] }
deku = "0.16.0"
embedded-graphics = "0.8.1"
tiled = "0.11.2"
tinybmp = "0.5.0"